src/objects/Commission_Adjustment__c.object
<CustomObject>
    <fields>
        <fullName>Commission_Adjustment__c</fullName>
        <label>Commission Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quota_Adjustment__c</fullName>
        <label>Quota Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Commission Adjustment</label>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>Commission Adjustment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>